<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dollop.dukaadriver.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.dollop.dukaadriver.fragment.NewOrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_new_orders" />

    <fragment
        android:id="@+id/navigation_jobs"
        android:name="com.dollop.dukaadriver.ui.jobs.CourierJobFragment"
        android:label="@string/title_jobs"
        tools:layout="@layout/fragment_courier_job" />


    <fragment
        android:id="@+id/navigation_earning"
        android:name="com.dollop.dukaadriver.ui.total_earnfragment.TotalEarningFragment"
        android:label="@string/title_earning"
        tools:layout="@layout/fragment_total_earning" />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dollop.dukaadriver.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>
